# workshop-codemash-2023

./: .bandit  .bashrc  .dockerignore  .envrc  .gitignore  .hadolint.yml  Dockerfile  Makefile.am  README.md  autogen.sh  bootstrap.sh  configure.ac  lab  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cloudbot-call.yml  container.yml  hadolint.yml  latex.yml  tfsec.yml  trivy.yml
docker/: Dockerfile  Dockerfile.latex  Makefile.am  README.md  configure.ac  docker-compose.yml  install-texlive.sh
docker/cloudbot/: Dockerfile  Makefile.am  app.js  package-lock.json  package.json
docs/: .chktexrc  abstract.md  chktex.sh  prerequisites.md  requirements.txt
docs/images/: arch_diagrams.drawio
docs/lab/: Makefile.am  mybib.bib  workshop-codemash-2023.markdown.lua  workshop-codemash-2023.tex
docs/lab/frontmatter/: title.tex
docs/lab/images/: arch_diagrams.drawio
docs/slides/: Makefile.am  preamble.tex  workshop-codemash-2023.tex
lab/: Makefile.am  configure.ac  preamble.tex  requirements.txt  workshop-codemash-2023.tex
lab/code/: cloudbotyaml.md
lab/frontmatter/: title.tex
src/: README.md  config.ini  github_util.py  helpers.py  labels.py  main.py  requirements.txt  util.py
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
tests/: Dockerfile.redhat  README.md  art.txt  art2-link.txt  art2.txt  configure.ac  error1.txt  requirements-test.txt
